# XNNPACK

./: CMakeLists.txt  build.sh
example/: CMakeLists.txt  main.cc
